@@ -6,6 +6,8 @@ PHP                                                                        NEWS
 - Changed phpize not to require automake and libtool. (Jani)
 - Fixed build system to always use bundled libtool files. (Jani)
 - Fixed a bug in mysqli_stmt_execute() (type conversion with NULL values). (Georg)
+- Fixed bug #31623 (OCILogin does not support password grace period).
+  (daniel dot beet at accuratesoftware dot com, Tony)
 - Fixed bug #31480 (Possible infinite loop in imap_mail_compose()). (Ilia)
 - Fixed bug #31479 (Fixed crash in chunk_split(), when chunklen > strlen). (Ilia)
 - Fixed bug #31454 (session_set_save_handler crashes PHP when supplied 
